--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,3 @@
-.App {
-  text-align: center;
-}
-
 .App-logo {
   height: 40vmin;
   pointer-events: none;
@@ -13,8 +9,8 @@
   }
 }
 
-.App-header {
-  background-color: #282c34;
+.App {
+  background-color: rgb(186,73,73,1);
   min-height: 100vh;
   display: flex;
   flex-direction: column;
@@ -22,6 +18,7 @@
   justify-content: center;
   font-size: calc(10px + 2vmin);
   color: white;
+  text-align: center;
 }
 
 .App-link {
