--- a/src/App.css
+++ b/src/App.css
@@ -1,14 +1,3 @@
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
 .App {
   background-color: rgb(186,73,73,1);
   min-height: 100vh;
@@ -18,18 +7,44 @@
   justify-content: center;
   font-size: calc(10px + 2vmin);
   color: white;
+  text-align: center;  
+}
+
+.Navbar{
+  width: 80vw;
+}
+
+.NavbarLogoAnchor{
+  text-decoration: none
+}
+
+.NavbarLogo{
+  float:left;
+  width: 20px;
+}
+
+.NavbarAppTitle{
+  float: left;
+  font-size: 20px;
+  color: white;
+  padding-left: 0.5vw;
+}
+
+.TimerComponent{
+  font-size: 5vw;
+  font-weight: bold;
+  margin-top: 20px;
+}
+
+#TimerBackgroundBox{
+  position: relative;
+  background-color: rgba(255, 255, 255, 0.15);
+  align-items: center;
   text-align: center;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+  height: 33vh;
+  max-width: 480px;
+  width: 85vw;
+  margin: auto;
+  margin-bottom: 50vh;
+  border-radius: 5px;
 }
