--- a/src/App.css
+++ b/src/App.css
@@ -11,6 +11,9 @@
 }
 
 .Navbar{
+  position:relative;
+  top:-16px;
+  left: -27px;
   width: 80vw;
 }
 
@@ -21,6 +24,7 @@
 .NavbarLogo{
   float:left;
   width: 20px;
+  padding-top: 4px;
 }
 
 .NavbarAppTitle{
@@ -30,21 +34,132 @@
   padding-left: 0.5vw;
 }
 
+.NavbarButtonSpan{
+  display: flex;
+  float:right;
+  align-items: center;
+}
+
+.NavbarReportButton{
+  display: flex;
+  background-color: rgba(255, 255, 255, 0.15);
+  color:white !important;
+  text-align: center;
+  float:right;
+  border:none;
+  border-radius: 4px;
+  cursor: pointer;
+  opacity: 0.9;
+  background: none rgba(255, 255, 255, 0.2);
+  box-shadow: none;
+  margin-left: 10px;
+  font-size: 13px;
+  padding: 8px 12px;
+  min-width: 70px;
+  outline: none;
+}
+
+.NavbarReportButton:hover {background: none rgba(255, 255, 255, 0.3)}
+.NavbarReportButton:active {transform: translateY(2px)}
+
+
+.NavbarReportIcon{
+  width: 16px;
+  margin-right: 4px;
+}
+
+.NavbarSettingsButton{
+  display: flex;
+  background-color: rgba(255, 255, 255, 0.15);
+  color:white !important;
+  text-align: center;
+  float:right;
+  border:none;
+  border-radius: 4px;
+  cursor: pointer;
+  opacity: 0.9;
+  background: none rgba(255, 255, 255, 0.2);
+  box-shadow: none;
+  margin-left: 10px;
+  font-size: 13px;
+  padding: 8px 12px;
+  min-width: 70px;
+  outline: none;
+}
+
+.NavbarSettingsButton:hover {background: none rgba(255, 255, 255, 0.3)}
+.NavbarSettingsButton:active {transform: translateY(2px)}
+
+
+.NavbarSettingsIcon{
+  width: 16px;
+  margin-right: 4px;
+}
+
 .TimerComponent{
-  font-size: 5vw;
+  position: inherit;
+  font-size: 70px;
   font-weight: bold;
-  margin-top: 20px;
+  top: -60px;
+  
+}
+@media screen and (max-width: 450px) {
+  .TimerComponent {
+     font-size: 15.5vw;
+  }
 }
 
 #TimerBackgroundBox{
   position: relative;
+  flex-direction: column;
+  justify-content: space-around;
   background-color: rgba(255, 255, 255, 0.15);
   align-items: center;
   text-align: center;
-  height: 33vh;
+  height: 330px;
   max-width: 480px;
   width: 85vw;
   margin: auto;
   margin-bottom: 50vh;
   border-radius: 5px;
+}
+@media screen and (max-height: 400px) {
+  #TimerBackgroundBox {
+     height: 55vh;
+     top: 5vh;
+  }
+  .TimerComponent{
+    font-size: 10vh;
+  }
+    .TimerButton{
+    top:500px
+  }
+}
+
+.TimerButton{
+  position: inherit;
+  top:-150px;
+  cursor:pointer;
+  border:none;
+  margin:20px 0px 0px;
+  padding: 0px 12px;
+  border-radius: 4px;
+  box-shadow: rgb(235,235,235) 0px 6px 0px;
+  font-size: 22px;
+  height: 55px;
+  width: 200px;
+  color: rgb(186,73,73);
+  font-weight: bold;
+  background-color: white;
+  transition: color 0.5s ease-in-out 0s;
+  outline: none;
+}
+
+.TimerButton:active {transform: translateY(4px);
+  box-shadow: rgb(235,235,235) 0px 2px 0px;
+}
+
+
+button, input, textarea {
+  font-family: 'ArialRounded', -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Helvetica, Arial, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol';
 }
